revisão do modulo 2/5

--- a/AULA 8/index.html
+++ b/AULA 8/index.html
@@ -23,7 +23,7 @@
 </style>
 </head>
 <body>
-    <h1>Trabalhando com Fontes</h1>
+    <h1><em>Trabalhando com Fontes</em></h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit nulla eligendi consectetur ea ipsa sequi consequuntur, provident minima non in error facere tenetur ducimus beatae ad unde, id sit quasi.</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda est maxime doloribus! Libero, voluptas illo consequatur eaque aperiam natus alias corrupti, veritatis modi, incidunt doloremque necessitatibus quisquam commodi. Culpa, nihil.</p>
 <h2>Subtitulo</h2>
