--- a/Capitulo 15/Aula 03/pseudoclasses.html
+++ b/Capitulo 15/Aula 03/pseudoclasses.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        *{
+            margin: 0;
+            padding:0;
+            box-sizing: border-box;
+        }
 div{
     display: inline-block;
-background-color: rgb(110, 110, 110);
-text-align: center;
-height: 200px;
-width: 200px;
-border: 1px solid black;
+    background-color: rgb(110, 110, 110);
+    text-align: center;
+    height: 200px;
+    width: 200px;
+    border: 1px solid black;
 }
 div:hover{
     background-color: royalblue;
